<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.dadm.miguelangelvicentebaeza.practica1.Pregunta6"
    tools:ignore="ExtraText">

    <RelativeLayout
        android:id="@+id/persona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?android:colorPrimary"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/username"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/avatar"
            android:fontFamily="sans-serif-medium"
            android:padding="2dp"
            android:text="Miguel Ángel"
            android:textAlignment="center"
            android:textColor="@color/material_white"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/txtPaso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/avatar"
            android:fontFamily="sans-serif-medium"
            android:text="@string/txt_Step6"
            android:textColor="@color/material_white"
            android:textSize="18dp" />

        <ProgressBar
            android:id="@+id/progressbar"
            style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPaso"
            android:paddingBottom="8dp"
            android:progress="60"
            android:progressBackgroundTint="?android:colorPrimary" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contPregunta"
        android:layout_below="@+id/persona"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/txtEnunciado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Question6"
            android:textSize="18dp"/>

        <RelativeLayout
            android:id="@+id/checkboxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEnunciado"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <CheckBox
                android:id="@+id/respuesta1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtEnunciado"
                android:text="@string/check_q6o1"
                android:textSize="18dp"/>
            <CheckBox
                android:id="@+id/respuesta2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/respuesta1"
                android:text="@string/check_q6o2"
                android:textSize="18dp"/>
            <CheckBox
                android:id="@+id/respuesta3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/respuesta2"
                android:text="@string/check_q6o3"
                android:textSize="18dp"/>
            <CheckBox
                android:id="@+id/respuesta4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/respuesta3"
                android:text="@string/check_q6o4"
                android:textSize="18dp"/>
            <CheckBox
                android:id="@+id/respuesta5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/respuesta4"
                android:text="@string/check_q6o5"
                android:textSize="18dp"/>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/contButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button"
            android:layout_marginRight="4dp"
            android:text="@string/btn_PrevQuestion"/>

        <Button
            android:id="@+id/btn_Next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_NextQuestion"/>
    </LinearLayout>
</RelativeLayout>
