<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="es.dadm.miguelangelvicentebaeza.practica1.MainActivity">

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/txt_Welcome"/>

    <EditText
        android:layout_below="@id/welcome_msg"
        android:layout_margin="16dp"
        android:id="@+id/txt_name"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_NameHint"/>

    <ImageView
        android:id="@+id/img_android"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_name"
        android:layout_width="220dp"
        android:layout_height="220dp"
        app:srcCompat="@drawable/androidlogo"/>

    <LinearLayout
        android:id="@+id/contButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="16dp">

        <Button
            android:id="@+id/btn_Start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_ConfirmName"/>
    </LinearLayout>
</RelativeLayout>
