<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.dadm.miguelangelvicentebaeza.practica1.Pregunta2"
    tools:ignore="ExtraText">

    <RelativeLayout
        android:id="@+id/persona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="?android:colorPrimary">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/username"
            android:layout_below="@+id/avatar"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAlignment="center"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/material_white"
            android:textSize="15dp"
            android:padding="2dp"
            android:text="Miguel Ángel"/>

        <TextView
            android:id="@+id/txtPaso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/avatar"
            android:text="@string/txt_Step2"
            android:textColor="@color/material_white"
            android:fontFamily="sans-serif-medium"
            android:textSize="18dp"/>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_below="@+id/txtPaso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
            android:progressBackgroundTint="?android:colorPrimary"
            android:paddingBottom="8dp"
            android:progress="20"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contPregunta"
        android:layout_below="@+id/persona"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/txtEnunciado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/contPregunta"
            android:layout_below="@+id/contPregunta"
            android:text="@string/txt_Question2"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/respuesta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEnunciado"
            android:hint="@string/edit_AnswerHint"
            android:inputType="number"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/contButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button"
            android:layout_marginRight="4dp"
            android:text="@string/btn_PrevQuestion"/>

        <Button
            android:id="@+id/btn_Next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_NextQuestion"/>
    </LinearLayout>
</RelativeLayout>
